[project]
name = "ppl-notebooks"
version = "0.1.0"
description = "notebooks for using pyro"
authors = [
    {name = "Rowan Callahan",email = "rowan.l.callahan@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "pyro-ppl>=1.8.0",
    "pyarrow (>=20.0.0,<21.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "jupyterlab (>=4.4.6,<5.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
]

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
